# reports-ai

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  DEBUGGING_TODOS.MD  GEMINI.md  README.md  pyproject.toml  run_pdoc.py
.github/workflows/: docs.yml  release.yml
docs/: configuration.md  index.md  make.py  search.js  settings.py  usage.md
docs/api/: index.html  reports_ai.html  search.js
docs/api/reports_ai/: admin.html  ai_assistants.html  apps.html  forms.html  migrations.html  models.html  services.html  tasks.html  urls.html  views.html
docs/api/reports_ai/services/: git_service.html  llm_service.html
proposals/: DEBUGGING_TODOS.md  GEMINI.md
reports_ai/: __init__.py  admin.py  ai_assistants.py  apps.py  forms.py  models.py  tasks.py  views.py
reports_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
reports_ai/services/: git_service.py  llm_service.py
reports_ai/templates/reports_ai/: reportinstance_detail.html  reportinstance_form.html  reportinstance_list.html
